<resources>
    <string name="app_name">Hey I\'m Here</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="title_activity_message">Messages</string>
    <string name="strSend">Send</string>
    <string name="btnNewMessage">Create Message</string>
    <string name="menu_edit_contacts">Contacts</string>
    <string name="create_new_message">Create New Message</string>
    <string name="title">New Message</string>
    <string name="to">To:</string>
    <string name="Contacts">Contacts</string>
    <string name="addContact">Add Contact</string>
    <string name="emptylist">Empty List</string>
    <string name="nocontacts">No Contacts</string>
    <string name="btnImportContacts">Import Contacts</string>
    <string name="EditContactTitle">Edit Contact</string>
    <string name="NameTitle">Name:</string>
    <string name="NumberTitle">Number:</string>
    <string name="Save">Save</string>
    <string name="AddContact">Add Contact</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDelete">Delete</string>
    <string name="EditContact">Edit Contact</string>
    <string name="MessageTitle">Message:</string>
    <string name="SendToTitle">Send To:</string>
    <string name="CreateDraft">Create Draft</string>
    <string name="CreateNewDraft">Create New Draft</string>
    <string name="menu_settings">Settings</string>
    <string name="txtTimeTitle">What Time?</string>
    <string name="txtDateTitle">What Day?</string>
    <string name="txtAddRule">Add Rule</string>
    <string name="btnSetDate">Set Date</string>
    <string name="btnSetTime">Set Time</string>
    <string name="txtRule">"Rule: "</string>
    <string name="txtRuleContent">Rule Content</string>
    <string name="txtDraftBody">Draft Body</string>
    <string name="txtDraftReciever">Draft Reciever</string>
    <string name="txtTo">"To: "</string>
    <string name="txtMessage">Message:</string>
    <string name="txtRules">"Rules: "</string>
    <string name="txtNoRules">No Rules</string>
    <string name="txtLocationName">No Location Yet</string>
    <string name="txtLocationLong">Location\'s Longitude</string>
    <string name="txtLocationLat">Location\'s Lattitude</string>
    <string name="txtLocationRadius">Location Radius</string>
    <string name="btnChooseLocation">Select Location</string>
    <string name="txtTimeRule">Time Rule: </string>
    <string name="txtLocationRule">"Location Rule: "</string>
    <string name="txtLocation">"Location: "</string>
    <string name="txtLongitude">"Longitude: "</string>
    <string name="txtLatitude">"Latitude: "</string>
    <string name="txtRadius">"Radius: "</string>
</resources>
