<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuitem_settings"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menuitem_feedback"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_feedback"></item>
    <item
        android:id="@+id/menuitem_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"></item>
    <item
        android:id="@+id/menuitem_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_quit"></item>
</menu>