<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtAddRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtAddRule"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLocationRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtLocationRule"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/btnChooseLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChooseLocation" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLocation" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLongitude" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLatitude" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtRadius" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/txtLocationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLocationName" />

            <TextView
                android:id="@+id/txtLocationLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLocationName" />

            <TextView
                android:id="@+id/txtLocationLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLocationName" />

            <TextView
                android:id="@+id/txtLocationRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtLocationName" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/Save" />

    </LinearLayout>

</LinearLayout>