<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_border"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center_vertical">


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/TimeRuleList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/txtTo" />

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/txtMessage" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:padding="4dp"
        android:paddingTop="6dp"
        android:text="@string/txtRules"
        app:layout_constraintEnd_toStartOf="@id/TimeRuleList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNumber" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@id/txtNumber"
        app:layout_constraintEnd_toStartOf="@id/btnAddTimeRule"
        app:layout_constraintStart_toEndOf="@id/LinearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@id/TimeRuleList"
        app:layout_constraintEnd_toStartOf="@id/btnAddTimeRule"
        app:layout_constraintStart_toEndOf="@id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <ImageButton
        android:id="@+id/btnAddTimeRule"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#303030"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/TimeRuleList"
        app:layout_constraintEnd_toStartOf="@id/btnAddLocationRule"
        app:layout_constraintStart_toEndOf="@id/txtName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <ImageButton
        android:id="@+id/btnAddLocationRule"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#303030"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/TimeRuleList"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintStart_toEndOf="@id/btnAddTimeRule"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#303030"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/TimeRuleList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAddLocationRule"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TimeRuleList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@id/LocationRuleList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@id/txtNumber">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/LocationRuleList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="0dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/LinearLayout"
        app:layout_constraintTop_toBottomOf="@id/TimeRuleList" />


</androidx.constraintlayout.widget.ConstraintLayout>